k8s/logstash.yaml
apiVersion: v1
kind: Service
metadata:
  name: logstash
  labels:
    component: elk
    role: logstash
spec:
  selector:
    component: elk
    role: logstash
  ports:
  - name: lumberjack
    port: 5044
    protocol: TCP
