k8s/kibana.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  labels:
    component: elk
    role: kibana
spec:
  selector:
    component: elk
    role: kibana
  ports:
  - name: http
    port: 80
    targetPort: 5601
    protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana-ingress
spec:
  rules:
  - host: kibana.k8sdev
    http:
      paths:
      - backend:
          serviceName: kibana
          servicePort: 80
        path: /
