k8s/prometheus.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  labels:
    component: monitoring
    role: prometheus
spec:
  selector:
    component: monitoring
    role: prometheus
  ports:
    - name: http
      port: 80
      targetPort: 9090
      protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
spec:
  rules:
  - host: prometheus.k8sdev
    http:
      paths:
      - backend:
          serviceName: prometheus
          servicePort: 80
        path: /
