k8s/sentry.yaml
apiVersion: v1
kind: Service
metadata:
  name: sentry
  labels:
    app: sentry
spec:
  selector:
    app: sentry
  ports:
  - name: http
    port: 80
    targetPort: 9000
    protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sentry-ingress
spec:
  rules:
  - host: sentry.k8sdev
    http:
      paths:
      - backend:
          serviceName: sentry
          servicePort: 80
        path: /
